	* string[0:END:-1] doesn't work; string[0:END][::-1] does (to get the index of whitespace within the char_per_line limit)
* implemented exception handling for filenames that are invalid or already taken by an existing file
	* when implementing download queue in the future, must also check if filename was already taken by an item in the queue

20230418
YT-DL-GUI Version 0.09
* the search button now starts a thread of search_stream, just like how the download button starts a thread of download_stream
* removed the use of StringVar for some widgets; went with directly changing the ["text"] of widgets instead to use less variables
* for now, placed all features of functions related to search_stream such as display_image and display_stream into the search_stream functions
	* this is to avoid errors related to one thread loading before the other but lacking required information because the other function hasn't finished yet
* wrapped yt.length in float() for gmtime() to help avoid the error "int() argument must be a string, a bytes-like object or a real number, not 'NoneType'"
	* root of problem is sometimes yt.length is not retrieved at all
* handled specific exceptions encountered when retrieving details such as youtube title, views, length

20230417
YT-DL-GUI Version 0.08
* implemented pause/resume (toggle) and cancel download features
	* subject to change when download queue is implemented, but for now, the download button is disabled while downloading is in progress or paused
* added a label that will display the download progress in text (bytes downloaded vs filesize)
* the user will be warned if the download button was clicked but no stream was selected, and the download will not start
* organized widgets into frames; main_window will consist only of frames that are packed while frames consist of widgets that are arranged in a grid
* implemented a feature where the frames of widgets disappear when the url is invalid, along with an error message